--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ section {
 }
 
 .service-box {
-  background: #0f172a;
+  background: #ADD8E6;
   padding: 25px;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
