--- a/style.css
+++ b/style.css
@@ -1,27 +1,4 @@
-/* ================= GENERAL STYLES ================= */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-body {
-  line-height: 1.6;
-  color: #333;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-/* ================= PRELOADER ================= */
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;/* ================= GENERAL STYLES ================= */
+================= GENERAL STYLES ================= */
 * {
   margin: 0;
   padding: 0;
