--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ nav ul li a.active {
 }
 
 .hero-text .btn:hover {
-  background: #A9FF1F;
+  background: #39FF1F;
 }
 
 /* ================= ABOUT ================= */
