--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ nav ul li a.active {
 }
 
 .hero-text .btn:hover {
-  background: ##00D100;
+  background: #00D100;
 }
 
 /* ================= ABOUT ================= */
@@ -462,7 +462,7 @@ nav ul li a.active {
 }
 
 .contact button:hover {
-  background: ##00D100;
+  background: #00D100;
 }
 
 /* ================= FOOTER ================= */
